--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Genealogy::Obituary::Parse
 
+0.02
+	Return DateTime and locations where possible
+
 0.01	Thu Jun  5 15:10:27 EDT 2025
         First draft
