--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
-Revision history for Genealogy::Obituary::Parse
+Revision history for Genealogy::Obituary::Parser
 
-0.02
+0.02	Fri Aug  8 09:40:16 EDT 2025
 	Return DateTime and locations where possible
 	Rename to Genealogy::Obituary::Parser
 
