--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Genealogy::Obituary::Parser
 
+0.03
+	Allow a ref to the string to be passed in
+
 0.02	Fri Aug  8 09:40:16 EDT 2025
 	Return DateTime and locations where possible
 	Rename to Genealogy::Obituary::Parser
