Get more information from the obit

--- a/Changes
+++ b/Changes
@@ -3,7 +3,7 @@ Revision history for Genealogy::Obituary::Parser
 0.03
 	Allow a ref to the string to be passed in
 	Support lack of space after "sons,"
-	Added more rules to determine date and place of death
+	Added more rules to determine more information
 	Formally define the API
 
 0.02	Fri Aug  8 09:40:16 EDT 2025
