--- a/Changes
+++ b/Changes
@@ -2,8 +2,8 @@ Revision history for Genealogy::Obituary::Parser
 
 0.04
 	Fix version consistency
-	Dedup sisters array
 	Latest test dashboard
+	Improved parsing of sisters
 
 0.03	Fri Sep 19 07:40:27 EDT 2025
 	Allow a ref to the string to be passed in
