--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for Genealogy::Obituary::Parser
 	Fix version consistency
 	Latest test dashboard
 	Improved parsing of sisters and brothers
+	Added fuzz testing
 
 0.03	Fri Sep 19 07:40:27 EDT 2025
 	Allow a ref to the string to be passed in
