Removed Geo::Coder::Free dependancy

--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@ Revision history for Genealogy::Obituary::Parser
 	Latest test dashboard
 	Improved parsing of sisters and brothers
 	Added fuzz testing
+	No need for Geo::Coder::List
 
 0.03	Fri Sep 19 07:40:27 EDT 2025
 	Allow a ref to the string to be passed in
