--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Genealogy::Obituary::Parser
 
-0.04
+0.04	Mon Oct 20 20:32:42 EDT 2025
 	Fix version consistency
 	Latest test dashboard
 	Improved parsing of sisters and brothers
