Preserve the DateTime object in the date record

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Genealogy::Obituary::Parser
 
+0.05
+	Preserve the DateTime object in the date record
+
 0.04	Mon Oct 20 20:32:42 EDT 2025
 	Fix version consistency
 	Latest test dashboard
