Remove date of marriage from the marriage record in the spouse record

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Genealogy::Obituary::Parser
 
 0.05
 	Preserve the DateTime object in the date record
+	Remove date of marriage from the marriage record in the spouse record
 
 0.04	Mon Oct 20 20:32:42 EDT 2025
 	Fix version consistency
