--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@ Revision history for Genealogy::Obituary::Parser
 	Remove date of marriage from the marriage record in the spouse record
 	Collapse multiple commas
 	Handle "Name1, Name2 and Name3" correctly
+	Wrote a corpus making it easier to do generic testing
 
 0.04	Mon Oct 20 20:32:42 EDT 2025
 	Fix version consistency
